# task-manager

./: .env.example  .gitignore  AGENT_LOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/commits-standards/: SKILL.md
.claude/skills/timer-logic-scaffold/: SKILL.md
scripts/: seed.py
src/task_manager/: config.py
src/task_manager/api/: main.py
src/task_manager/api/routes/: tasks.py  timer.py  work_tasks.py
src/task_manager/cli/: commands.py
src/task_manager/db/: database.py
src/task_manager/models/: task.py  work_task.py
src/task_manager/services/: task_service.py  timer_service.py  work_task_service.py
tests/: test_api.py  test_cli.py  test_models.py  test_services.py  test_timer.py  test_work_tasks.py
